--- a/public/material/index.html
+++ b/public/material/index.html
@@ -140,12 +140,9 @@ from within your R session:</p>
 </ul>
 <h3 id="mandatory-readings-2">Mandatory readings</h3>
 <ul>
-<li>
-<p><a href="/post/object-types-vec/">Tutorial: Vectors</a></p>
-</li>
-<li>
-<p><a href="/post/object-types-adv/">Tutorial: Factors and data frames</a></p>
-</li>
+<li><a href="/post/object-types-vec/">Tutorial: Vectors</a></li>
+<li><a href="/post/object-types-adv/">Tutorial: Factors and data frames</a></li>
+<li><a href="https://r4ds.had.co.nz/tibbles.html">Chapter 10 of Wickham &amp; Grolemund</a></li>
 </ul>
 <h3 id="exercises-1">Exercises</h3>
 <p>After installing (and updating) the <code>DataScienceExercises</code>-package
