--- a/public/index.html
+++ b/public/index.html
@@ -36,16 +36,23 @@
 <h2 id="an-introduction-to-data-science-using-r-spring-semester-2022">An introduction to data science using R (spring semester 2022)</h2>
 <p>This is the website for the course &lsquo;An introduction to data science using R&rsquo;
 taught at the Europa-Unviversity Flensburg in the spring semester 2022.</p>
-<p>FROM EARLIER:</p>
 <p>All pages not under the root directory of the website are listed below.
-You can also visit the list page of a single section, e.g., <a href="/post/">posts</a>,
-or <a href="/note/">notes</a>.</p>
+This includes both posted tutorials and lecture notes. Note that the dates
+do not yet correspond to the session dates, but to the dates the content
+was posted.
+You can also visit the list of page of a single section,
+e.g., <a href="/post/">tutorials</a>, or <a href="/notes/">lecture notes</a>.</p>
 <p><strong>Most recent posts:</strong></p>
 
 
 <ul>
   
   
+  
+  <li>
+    <span class="date">2022/03/04</span>
+    <a href="/notes/t5-visualization-lecture-notes/">Visualization: Lecture notes</a>
+  </li>
   
   <li>
     <span class="date">2022/03/02</span>
