--- a/public/material/index.html
+++ b/public/material/index.html
@@ -122,6 +122,7 @@
 </ul>
 <h3 id="mandatory-readings-1">Mandatory readings</h3>
 <ul>
+<li><a href="https://r4ds.had.co.nz/workflow-basics.html">R for Data Science, Chapter 4: Workflow - basics</a></li>
 <li><a href="/post/first-steps/">Tutorial: Commands, objects, and assignments</a></li>
 <li><a href="/post/object-types-func/">Tutorial: Functions</a></li>
 </ul>
@@ -142,7 +143,7 @@ from within your R session:</p>
 <ul>
 <li><a href="/post/object-types-vec/">Tutorial: Vectors</a></li>
 <li><a href="/post/object-types-adv/">Tutorial: Factors and data frames</a></li>
-<li><a href="https://r4ds.had.co.nz/tibbles.html">Chapter 10 of Wickham &amp; Grolemund</a></li>
+<li><a href="https://r4ds.had.co.nz/tibbles.html">R for Data Science, Chapter 10: Tibbles</a></li>
 </ul>
 <h3 id="exercises-1">Exercises</h3>
 <p>After installing (and updating) the <code>DataScienceExercises</code>-package
@@ -153,8 +154,14 @@ from within your R session:</p>
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
 <h2 id="s5">Session 5: Visualization I</h2>
+<ul>
+<li><a href="slides/T5-Visualization.pdf">Slides</a></li>
+<li><a href="/notes/t5-visualization-lecture-notes/">Lecture notes</a></li>
+</ul>
 <h3 id="mandatory-readings-3">Mandatory readings</h3>
-<p>TBD</p>
+<ul>
+<li><a href="https://r4ds.had.co.nz/data-visualisation.html">R for Data Science, Chapter 3: Data visualization</a></li>
+</ul>
 <h3 id="exercises-2">Exercises</h3>
 <p>After installing (and updating) the <code>DataScienceExercises</code>-package
 (as described here), run the following command from within your R session:</p>
@@ -165,14 +172,22 @@ from within your R session:</p>
 </code></pre>
 <h2 id="s6">Session 6: Data wrangling I</h2>
 <h3 id="mandatory-readings-4">Mandatory readings</h3>
-<p>TBD</p>
+<ul>
+<li><a href="https://r4ds.had.co.nz/transform.html">R for Data Science, Chapter 5: Data transformation</a></li>
+<li><a href="">Tutorial: Read and write data with fread and fwrite</a></li>
+<li><a href="https://r4ds.had.co.nz/tidy-data.html">R for Data Science, Chapter 12: Tidy data</a></li>
+</ul>
 <h2 id="s7">Session 7: R Markdown</h2>
 <h3 id="mandatory-readings-5">Mandatory readings</h3>
 <ul>
+<li><a href="https://r4ds.had.co.nz/tidy-data.html">R for Data Science, Chapter 27: R Markdown</a></li>
 <li><a href="https://commonmark.org/help/tutorial/">The CommonMark markdown tutorial</a></li>
 </ul>
 <h2 id="s8">Session 8: Projects and workflow</h2>
 <h3 id="mandatory-readings-6">Mandatory readings</h3>
+<ul>
+<li><a href="">Tutorial: how to organize your R project</a></li>
+</ul>
 
 </main>
 
