--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,16 @@ e.g., <a href="/post/">tutorials</a>, or <a href="/notes/">lecture notes</a>.</p
   
   
   <li>
+    <span class="date">2022/03/09</span>
+    <a href="/post/importing-exporting-data/">Importing and exporting data using data.table</a>
+  </li>
+  
+  <li>
+    <span class="date">2022/03/09</span>
+    <a href="/post/setting-up-an-r-project/">Setting up an R project</a>
+  </li>
+  
+  <li>
     <span class="date">2022/03/02</span>
     <a href="/post/first-steps/">First steps in R</a>
   </li>
