--- a/public/material/index.html
+++ b/public/material/index.html
@@ -78,19 +78,19 @@
 <tr>
 <td style="text-align:center"><a href="#s6">6</a></td>
 <td style="text-align:left">April 7, 2022</td>
-<td style="text-align:left">Data wrangling I</td>
-<td style="text-align:center">TBD</td>
+<td style="text-align:left">Projects and data import</td>
+<td style="text-align:center"><a href="slides/T6-ProjectSetup.pdf">Slides</a></td>
 </tr>
 <tr>
 <td style="text-align:center"><a href="#s7">7</a></td>
 <td style="text-align:left">April 20, 2022</td>
-<td style="text-align:left">R Markdown</td>
+<td style="text-align:left">Data wrangling I</td>
 <td style="text-align:center">TBD</td>
 </tr>
 <tr>
 <td style="text-align:center"><a href="#s8">8</a></td>
 <td style="text-align:left">April 21, 2022</td>
-<td style="text-align:left">Projects and workflow</td>
+<td style="text-align:left">R Markdown</td>
 <td style="text-align:center">TBD</td>
 </tr>
 <tr>
@@ -177,23 +177,26 @@ for the exercises on atomic vectors and lists:</p>
   package = &quot;DataScienceExercises&quot;, 
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
-<h2 id="s6">Session 6: Data wrangling I</h2>
+<h2 id="s6">Session 6: Project organization and data import</h2>
+<ul>
+<li><a href="slides/T6-ProjectSetup.pdf">Slides</a></li>
+</ul>
 <h3 id="mandatory-readings-4">Mandatory readings</h3>
 <ul>
+<li><a href="/post/setting-up-an-r-project/">Tutorial: How to organize your R project</a></li>
+<li><a href="/post/importing-exporting-data/">Tutorial: Read and write data</a></li>
+</ul>
+<h2 id="s7">Session 7: Data wrangling I</h2>
+<h3 id="mandatory-readings-5">Mandatory readings</h3>
+<ul>
 <li><a href="https://r4ds.had.co.nz/transform.html">R for Data Science, Chapter 5: Data transformation</a></li>
-<li><a href="">Tutorial: Read and write data with fread and fwrite</a></li>
 <li><a href="https://r4ds.had.co.nz/tidy-data.html">R for Data Science, Chapter 12: Tidy data</a></li>
 </ul>
-<h2 id="s7">Session 7: R Markdown</h2>
-<h3 id="mandatory-readings-5">Mandatory readings</h3>
+<h2 id="s8">Session 8: R Markdown</h2>
+<h3 id="mandatory-readings-6">Mandatory readings</h3>
 <ul>
 <li><a href="https://r4ds.had.co.nz/tidy-data.html">R for Data Science, Chapter 27: R Markdown</a></li>
 <li><a href="https://commonmark.org/help/tutorial/">The CommonMark markdown tutorial</a></li>
-</ul>
-<h2 id="s8">Session 8: Projects and workflow</h2>
-<h3 id="mandatory-readings-6">Mandatory readings</h3>
-<ul>
-<li><a href="">Tutorial: how to organize your R project</a></li>
 </ul>
 
 </main>
