--- a/public/material/index.html
+++ b/public/material/index.html
@@ -49,13 +49,13 @@
 <td style="text-align:center"><a href="#s1">1</a></td>
 <td style="text-align:left">March 17, 2022</td>
 <td style="text-align:left">General introduction</td>
-<td style="text-align:center"><a href="slides/T1-1-Introduction.pdf">Slides Orga</a>, <a href="slides/T1-2-PhiloFoundation.pdf">Slides Philo</a></td>
+<td style="text-align:center"><a href="slides/T1-1-Introduction.pdf">Slides Orga</a>, <a href="slides/T1-2-Installation.pdf">Slides Install</a></td>
 </tr>
 <tr>
 <td style="text-align:center"><a href="#s2">2</a></td>
 <td style="text-align:left">March 23, 2022</td>
-<td style="text-align:left">Installation</td>
-<td style="text-align:center"><a href="slides/T2-Installation.pdf">Slides</a></td>
+<td style="text-align:left">Philosophy of Data Science</td>
+<td style="text-align:center"><a href="slides/T2-PhiloFoundation.pdf">Slides Philo</a></td>
 </tr>
 <tr>
 <td style="text-align:center"><a href="#s3">3</a></td>
@@ -89,38 +89,35 @@
 </tr>
 <tr>
 <td style="text-align:center"><a href="#s8">8</a></td>
-<td style="text-align:left">April 21, 2022</td>
-<td style="text-align:left">R Markdown</td>
-<td style="text-align:center">TBD</td>
-</tr>
-<tr>
-<td style="text-align:center"><a href="#s9">9</a></td>
 <td style="text-align:left">April 28, 2022</td>
-<td style="text-align:left">Taking stock</td>
+<td style="text-align:left">R Markdown</td>
 <td style="text-align:center">TBD</td>
 </tr>
 </tbody>
 </table>
-<h2 id="s1">Session 1: Introduction</h2>
+<h2 id="s1">Session 1: Introduction and installation</h2>
 <ul>
 <li><a href="slides/T1-1-Introduction.pdf">Slides for the organizational part</a></li>
-<li><a href="slides/T1-2-PhiloFoundation.pdf">Slides for the philosophical part</a></li>
-</ul>
-<h2 id="s2">Session 2: Installation</h2>
-<ul>
-<li><a href="slides/T2-Installation.pdf">Slides</a></li>
+<li><a href="slides/T1-2-Installation.pdf">Slides on installing R</a></li>
 </ul>
 <h3 id="mandatory-readings">Mandatory readings</h3>
 <ul>
 <li><a href="/post/installation/">Tutorial: installing basic software</a></li>
 <li><a href="/post/installing-packages/">Tutorial: installing the required R packages</a></li>
+</ul>
+<h2 id="s2">Session 2: Philosophy of Data Science</h2>
+<ul>
+<li><a href="slides/T2-PhiloFoundation.pdf">Slides</a></li>
+</ul>
+<h3 id="mandatory-readings-1">Mandatory readings</h3>
+<ul>
 <li><a href="/post/using-exercises/">Tutorial: doing exercises</a></li>
 </ul>
 <h2 id="s3">Session 3: First steps in R I - Basics and functions</h2>
 <ul>
 <li><a href="slides/T3-Basics-Functions.pdf">Slides</a></li>
 </ul>
-<h3 id="mandatory-readings-1">Mandatory readings</h3>
+<h3 id="mandatory-readings-2">Mandatory readings</h3>
 <ul>
 <li><a href="https://r4ds.had.co.nz/workflow-basics.html">R for Data Science, Chapter 4: Workflow - basics</a></li>
 <li><a href="/post/first-steps/">Tutorial: Commands, objects, and assignments</a></li>
@@ -139,7 +136,7 @@ from within your R session:</p>
 <ul>
 <li><a href="slides/T4-Objects.pdf">Slides</a></li>
 </ul>
-<h3 id="mandatory-readings-2">Mandatory readings</h3>
+<h3 id="mandatory-readings-3">Mandatory readings</h3>
 <ul>
 <li><a href="/post/object-types-vec/">Tutorial: Vectors</a></li>
 <li><a href="/post/object-types-adv/">Tutorial: Factors and data frames</a></li>
@@ -165,7 +162,7 @@ for the exercises on atomic vectors and lists:</p>
 <li><a href="slides/T5-Visualization.pdf">Slides</a></li>
 <li><a href="/notes/t5-visualization-lecture-notes/">Lecture notes</a></li>
 </ul>
-<h3 id="mandatory-readings-3">Mandatory readings</h3>
+<h3 id="mandatory-readings-4">Mandatory readings</h3>
 <ul>
 <li><a href="https://r4ds.had.co.nz/data-visualisation.html">R for Data Science, Chapter 3: Data visualization</a></li>
 </ul>
@@ -181,19 +178,19 @@ for the exercises on atomic vectors and lists:</p>
 <ul>
 <li><a href="slides/T6-ProjectSetup.pdf">Slides</a></li>
 </ul>
-<h3 id="mandatory-readings-4">Mandatory readings</h3>
+<h3 id="mandatory-readings-5">Mandatory readings</h3>
 <ul>
 <li><a href="/post/setting-up-an-r-project/">Tutorial: How to organize your R project</a></li>
 <li><a href="/post/importing-exporting-data/">Tutorial: Read and write data</a></li>
 </ul>
 <h2 id="s7">Session 7: Data wrangling I</h2>
-<h3 id="mandatory-readings-5">Mandatory readings</h3>
+<h3 id="mandatory-readings-6">Mandatory readings</h3>
 <ul>
 <li><a href="https://r4ds.had.co.nz/transform.html">R for Data Science, Chapter 5: Data transformation</a></li>
 <li><a href="https://r4ds.had.co.nz/tidy-data.html">R for Data Science, Chapter 12: Tidy data</a></li>
 </ul>
 <h2 id="s8">Session 8: R Markdown</h2>
-<h3 id="mandatory-readings-6">Mandatory readings</h3>
+<h3 id="mandatory-readings-7">Mandatory readings</h3>
 <ul>
 <li><a href="https://r4ds.had.co.nz/tidy-data.html">R for Data Science, Chapter 27: R Markdown</a></li>
 <li><a href="https://commonmark.org/help/tutorial/">The CommonMark markdown tutorial</a></li>
