--- a/public/material/index.html
+++ b/public/material/index.html
@@ -177,6 +177,7 @@ for the exercises on atomic vectors and lists:</p>
 <h2 id="s6">Session 6: Project organization and data import</h2>
 <ul>
 <li><a href="slides/T6-ProjectSetup.pdf">Slides</a></li>
+<li><a href="files/fread_expls.zip">Example data</a></li>
 </ul>
 <h3 id="mandatory-readings-5">Mandatory readings</h3>
 <ul>
