--- a/public/material/index.html
+++ b/public/material/index.html
@@ -203,7 +203,7 @@ from within your R session:</p>
 <h2 id="s8">Session 8: R Markdown</h2>
 <h3 id="mandatory-readings-7">Mandatory readings</h3>
 <ul>
-<li><a href="https://r4ds.had.co.nz/tidy-data.html">R for Data Science, Chapter 27: R Markdown</a></li>
+<li><a href="https://r4ds.had.co.nz/r-markdown.html">R for Data Science, Chapter 27: R Markdown</a></li>
 <li><a href="https://commonmark.org/help/tutorial/">The CommonMark markdown tutorial</a></li>
 </ul>
 
