--- a/public/material/index.html
+++ b/public/material/index.html
@@ -195,6 +195,12 @@ from within your R session:</p>
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
 <h2 id="s7">Session 7: Data wrangling I</h2>
+<ul>
+<li><a href="slides/T7-DataWrangling.pdf">Slides</a></li>
+<li><a href="files/wrangling_exercises_data.zip">Exercise data</a></li>
+<li><a href="/notes/data-wrangling-lecture-notes/">Lecture notes</a></li>
+<li><a href="files/wrangling-notes-data.zip">Data for lecture notes</a></li>
+</ul>
 <h3 id="mandatory-readings-6">Mandatory readings</h3>
 <ul>
 <li><a href="https://r4ds.had.co.nz/transform.html">R for Data Science, Chapter 5: Data transformation</a></li>
