--- a/public/material/index.html
+++ b/public/material/index.html
@@ -85,13 +85,13 @@
 <td style="text-align:center"><a href="#s7">7</a></td>
 <td style="text-align:left">April 20, 2022</td>
 <td style="text-align:left">Data wrangling I</td>
-<td style="text-align:center">TBD</td>
+<td style="text-align:center"><a href="slides/T7-DataWrangling.pdf">Slides</a></td>
 </tr>
 <tr>
 <td style="text-align:center"><a href="#s8">8</a></td>
 <td style="text-align:left">April 28, 2022</td>
 <td style="text-align:left">R Markdown</td>
-<td style="text-align:center">TBD</td>
+<td style="text-align:center"><a href="slides/T8-RMarkdown.pdf">Slides</a></td>
 </tr>
 </tbody>
 </table>
@@ -116,12 +116,17 @@
 <h2 id="s3">Session 3: First steps in R I - Basics and functions</h2>
 <ul>
 <li><a href="slides/T3-Basics-Functions.pdf">Slides</a></li>
+<li><a href="https://gist.github.com/graebnerc/a7d1b9e02c761b7ad7ac553d760c9c5d">Solution to function exercise</a></li>
 </ul>
 <h3 id="mandatory-readings-2">Mandatory readings</h3>
 <ul>
 <li><a href="https://r4ds.had.co.nz/workflow-basics.html">R for Data Science, Chapter 4: Workflow - basics</a></li>
 <li><a href="/post/first-steps/">Tutorial: Commands, objects, and assignments</a></li>
 <li><a href="/post/object-types-func/">Tutorial: Functions</a></li>
+</ul>
+<h3 id="further-readings">Further readings</h3>
+<ul>
+<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/main/rstudio-ide.pdf">R Studio IDE cheat sheet</a></li>
 </ul>
 <h3 id="exercises">Exercises</h3>
 <p>After installing (and updating) the <code>DataScienceExercises</code>-package
@@ -166,6 +171,10 @@ from within your R session for the exercises on atomic vectors and lists:</p>
 <ul>
 <li><a href="https://r4ds.had.co.nz/data-visualisation.html">R for Data Science, Chapter 3: Data visualization</a></li>
 </ul>
+<h3 id="further-readings-1">Further readings</h3>
+<ul>
+<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-visualization.pdf">ggplot2 cheat sheet</a></li>
+</ul>
 <h3 id="exercises-2">Exercises</h3>
 <p>After installing (and updating) the <code>DataScienceExercises</code>-package
 (as described <a href="/post/using-exercises/">here</a>), run the following command
@@ -206,11 +215,27 @@ from within your R session:</p>
 <li><a href="https://r4ds.had.co.nz/transform.html">R for Data Science, Chapter 5: Data transformation</a></li>
 <li><a href="https://r4ds.had.co.nz/tidy-data.html">R for Data Science, Chapter 12: Tidy data</a></li>
 </ul>
+<h3 id="further-readings-2">Further readings</h3>
+<ul>
+<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-transformation.pdf">dplyr cheat sheet</a></li>
+<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/main/tidyr.pdf">tidyr cheat sheet</a></li>
+</ul>
 <h2 id="s8">Session 8: R Markdown</h2>
+<ul>
+<li><a href="slides/T8-RMarkdown.pdf">Slides</a></li>
+<li><a href="files/DesasterMarkdown.pdf">DesasterMarkdown.pdf</a></li>
+<li><a href="files/NicerMarkdown.pdf">NicerMarkdown.pdf</a></li>
+<li><a href="https://gist.github.com/graebnerc/6d268af56e00909efffc372c1a5da1c3">Code for the markdown desaster</a></li>
+</ul>
 <h3 id="mandatory-readings-7">Mandatory readings</h3>
 <ul>
 <li><a href="https://r4ds.had.co.nz/r-markdown.html">R for Data Science, Chapter 27: R Markdown</a></li>
 <li><a href="https://commonmark.org/help/tutorial/">The CommonMark markdown tutorial</a></li>
+</ul>
+<h3 id="further-reading">Further reading</h3>
+<ul>
+<li><a href="https://bookdown.org/yihui/rmarkdown-cookbook/">The R Markdown Cookbook</a></li>
+<li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/main/rmarkdown.pdf">R Markdown cheat sheet</a></li>
 </ul>
 
 </main>
