--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,11 @@ e.g., <a href="/post/">tutorials</a>, or <a href="/notes/">lecture notes</a>.</p
   
   
   <li>
+    <span class="date">2022/04/20</span>
+    <a href="/notes/data-wrangling-lecture-notes/">Data wrangling: Lecture notes</a>
+  </li>
+  
+  <li>
     <span class="date">2022/04/06</span>
     <a href="/post/rmarkdown-exercises/">R-Markdown exercises</a>
   </li>
