--- a/public/material/index.html
+++ b/public/material/index.html
@@ -99,6 +99,24 @@
 <td style="text-align:left">R Markdown</td>
 <td style="text-align:center"><a href="slides/T8-RMarkdown.pdf">Slides</a></td>
 </tr>
+<tr>
+<td style="text-align:center"><a href="#s10">10</a></td>
+<td style="text-align:left">May 5, 2022</td>
+<td style="text-align:left">Intro models</td>
+<td style="text-align:center"><a href="slides/T10-ModelsIntro">Slides</a></td>
+</tr>
+<tr>
+<td style="text-align:center"><a href="#s11">11</a></td>
+<td style="text-align:left">May 12, 2022</td>
+<td style="text-align:left">Simple Linear Regression</td>
+<td style="text-align:center"><a href="slides/T11-SimpleLinearRegression.pdf">Slides</a></td>
+</tr>
+<tr>
+<td style="text-align:center"><a href="#s13">13</a></td>
+<td style="text-align:left">May 19, 2022</td>
+<td style="text-align:left">Multiple Linear Regression</td>
+<td style="text-align:center"><a href="slides/T13-MultipleLinearRegression.pdf">Slides</a></td>
+</tr>
 </tbody>
 </table>
 <h2 id="s1">Session 1: Introduction and installation</h2>
@@ -274,7 +292,36 @@ from within your R session:</p>
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
 <p>The practical exercise for this topic can be found
-<a href="/post/2022-04-06-rmarkdown-exercises/">here</a>.</p>
+<a href="/post/rmarkdown-exercises/">here</a>.</p>
+<h2 id="s10">Session 10: Modelling data</h2>
+<ul>
+<li><a href="slides/T10-ModelsIntro">Slides</a></li>
+<li><a href="http://guessthecorrelation.com/">Guess the correlation browser game</a></li>
+</ul>
+<h3 id="mandatory-readings-9">Mandatory readings</h3>
+<ul>
+<li>TBD</li>
+</ul>
+<h2 id="s11">Session 11: Simple linear regression</h2>
+<ul>
+<li><a href="slides/T11-SimpleLinearRegression.pdf">Slides</a></li>
+</ul>
+<h3 id="mandatory-readings-10">Mandatory readings</h3>
+<ul>
+<li><a href="https://moderndive.com/5-regression.html">Statistical Inference via Data Science, Chapter 5: Basic regression</a></li>
+</ul>
+<h3 id="exercises-7">Exercises</h3>
+<p>TBD</p>
+<h2 id="s13">Session 13: Multiple linear regression</h2>
+<ul>
+<li><a href="slides/T13-MultipleLinearRegression.pdf">Slides</a></li>
+</ul>
+<h3 id="mandatory-readings-11">Mandatory readings</h3>
+<ul>
+<li><a href="https://moderndive.com/5-regression.html">Statistical Inference via Data Science, Chapter 6: Multiple regression</a></li>
+</ul>
+<h3 id="exercises-8">Exercises</h3>
+<p>TBD</p>
 
 </main>
 
