--- a/public/material/index.html
+++ b/public/material/index.html
@@ -243,6 +243,7 @@ from within your R session:</p>
 <ul>
 <li><a href="slides/T8-DataWrangling.pdf">Slides</a></li>
 <li><a href="files/wrangling_exercises_data.zip">Exercise data</a></li>
+<li><a href="https://gist.github.com/graebnerc/f635b4e3cfcbcc01b4511f26d0561251">Solution to exercise 1</a></li>
 <li><a href="/notes/data-wrangling-lecture-notes/">Lecture notes</a></li>
 <li><a href="files/wrangling-notes-data.zip">Data for lecture notes</a></li>
 </ul>
