--- a/public/material/index.html
+++ b/public/material/index.html
@@ -242,9 +242,9 @@ from within your R session:</p>
 <h2 id="s8">Session 8: Data wrangling I</h2>
 <ul>
 <li><a href="slides/T8-DataWrangling.pdf">Slides</a></li>
-<li><a href="files/wrangling_exercises_data.zip">Exercise data</a></li>
-<li><a href="https://gist.github.com/graebnerc/f635b4e3cfcbcc01b4511f26d0561251">Solution to exercise 1</a></li>
 <li><a href="/notes/data-wrangling-lecture-notes/">Lecture notes</a></li>
+<li><a href="files/wrangling_exercises_data.zip">Exercise data</a></li>
+<li><a href="https://gist.github.com/graebnerc/7a054a52cd5799f0adf66c269b040b46">Lecture scripts from the session and exercise solutions</a></li>
 <li><a href="files/wrangling-notes-data.zip">Data for lecture notes</a></li>
 </ul>
 <h3 id="mandatory-readings-7">Mandatory readings</h3>
