--- a/public/material/index.html
+++ b/public/material/index.html
@@ -117,6 +117,12 @@
 <td style="text-align:left">Multiple Linear Regression</td>
 <td style="text-align:center"><a href="slides/T13-MultipleLinearRegression.pdf">Slides</a></td>
 </tr>
+<tr>
+<td style="text-align:center"><a href="#s14">14</a></td>
+<td style="text-align:left">June 1, 2022</td>
+<td style="text-align:left">Sampling Theory</td>
+<td style="text-align:center"><a href="slides/T14-SamplingTheory.pdf">Slides</a></td>
+</tr>
 </tbody>
 </table>
 <h2 id="s1">Session 1: Introduction and installation</h2>
@@ -319,9 +325,21 @@ from within your R session:</p>
 </ul>
 <h3 id="mandatory-readings-11">Mandatory readings</h3>
 <ul>
-<li><a href="https://moderndive.com/5-regression.html">Statistical Inference via Data Science, Chapter 6: Multiple regression</a></li>
+<li><a href="https://moderndive.com/6-multiple-regression.html">Statistical Inference via Data Science, Chapter 6: Multiple regression</a></li>
 </ul>
 <h3 id="exercises-8">Exercises</h3>
+<p>TBD</p>
+<h2 id="s14">Session 14: Sampling theory</h2>
+<ul>
+<li><a href="slides/T14-SamplingTheory.pdf">Slides</a></li>
+<li>Lecture scripts from the session and exercise solutions</li>
+</ul>
+<h3 id="mandatory-readings-12">Mandatory readings</h3>
+<ul>
+<li><a href="https://moderndive.com/7-sampling.html">Statistical Inference via Data Science, Chapter 7: Sampling</a></li>
+<li><a href="/post/mcs/">Tutorial: Monte Carlo Simulations in R</a></li>
+</ul>
+<h3 id="exercises-9">Exercises</h3>
 <p>TBD</p>
 
 </main>
