--- a/public/material/index.html
+++ b/public/material/index.html
@@ -123,6 +123,12 @@
 <td style="text-align:left">Sampling Theory</td>
 <td style="text-align:center"><a href="slides/T14-SamplingTheory.pdf">Slides</a></td>
 </tr>
+<tr>
+<td style="text-align:center"><a href="#s15">15</a></td>
+<td style="text-align:left">June 2, 2022</td>
+<td style="text-align:left">Bootstrap</td>
+<td style="text-align:center"><a href="slides/T15-Bootstrap.pdf">Slides</a></td>
+</tr>
 </tbody>
 </table>
 <h2 id="s1">Session 1: Introduction and installation</h2>
@@ -305,15 +311,11 @@ from within your R session:</p>
 <li><a href="slides/T10-ModelsIntro.pdf">Slides</a></li>
 <li><a href="http://guessthecorrelation.com/">Guess the correlation browser game</a></li>
 </ul>
-<h3 id="mandatory-readings-9">Mandatory readings</h3>
-<ul>
-<li>TBD</li>
-</ul>
 <h2 id="s11">Session 11: Simple linear regression</h2>
 <ul>
 <li><a href="slides/T11-SimpleLinearRegression.pdf">Slides</a></li>
 </ul>
-<h3 id="mandatory-readings-10">Mandatory readings</h3>
+<h3 id="mandatory-readings-9">Mandatory readings</h3>
 <ul>
 <li><a href="https://moderndive.com/5-regression.html">Statistical Inference via Data Science, Chapter 5: Basic regression</a></li>
 </ul>
@@ -323,7 +325,7 @@ from within your R session:</p>
 <ul>
 <li><a href="slides/T13-MultipleLinearRegression.pdf">Slides</a></li>
 </ul>
-<h3 id="mandatory-readings-11">Mandatory readings</h3>
+<h3 id="mandatory-readings-10">Mandatory readings</h3>
 <ul>
 <li><a href="https://moderndive.com/6-multiple-regression.html">Statistical Inference via Data Science, Chapter 6: Multiple regression</a></li>
 </ul>
@@ -334,12 +336,24 @@ from within your R session:</p>
 <li><a href="slides/T14-SamplingTheory.pdf">Slides</a></li>
 <li>Lecture scripts from the session and exercise solutions</li>
 </ul>
-<h3 id="mandatory-readings-12">Mandatory readings</h3>
+<h3 id="mandatory-readings-11">Mandatory readings</h3>
 <ul>
 <li><a href="https://moderndive.com/7-sampling.html">Statistical Inference via Data Science, Chapter 7: Sampling</a></li>
 <li><a href="/post/mcs/">Tutorial: Monte Carlo Simulations in R</a></li>
 </ul>
 <h3 id="exercises-9">Exercises</h3>
+<p>TBD</p>
+<h2 id="s15">Session 15: Bootstrapping and confidence intervals</h2>
+<ul>
+<li><a href="slides/T15-Bootstrap.pdf">Slides</a></li>
+<li><a href="files/T15-SemesterSample.csv">T15-SemesterSample.csv</a></li>
+<li>Lecture scripts from the session and exercise solutions</li>
+</ul>
+<h3 id="mandatory-readings-12">Mandatory readings</h3>
+<ul>
+<li><a href="https://moderndive.com/8-confidence-intervals.html">Statistical Inference via Data Science, Chapter 8: Bootstrapping and Confidence Intervals</a></li>
+</ul>
+<h3 id="exercises-10">Exercises</h3>
 <p>TBD</p>
 
 </main>
