--- a/public/material/index.html
+++ b/public/material/index.html
@@ -129,6 +129,12 @@
 <td style="text-align:left">Bootstrap</td>
 <td style="text-align:center"><a href="slides/T15-Bootstrap.pdf">Slides</a></td>
 </tr>
+<tr>
+<td style="text-align:center"><a href="#s16">16</a></td>
+<td style="text-align:left">June 2, 2022</td>
+<td style="text-align:left">Hypothesis Testing</td>
+<td style="text-align:center"><a href="slides/T16-HypothesisTesting.pdf">Slides</a></td>
+</tr>
 </tbody>
 </table>
 <h2 id="s1">Session 1: Introduction and installation</h2>
@@ -354,6 +360,17 @@ from within your R session:</p>
 <li><a href="https://moderndive.com/8-confidence-intervals.html">Statistical Inference via Data Science, Chapter 8: Bootstrapping and Confidence Intervals</a></li>
 </ul>
 <h3 id="exercises-10">Exercises</h3>
+<p>TBD</p>
+<h2 id="s16">Session 16: Hypothesis testing</h2>
+<ul>
+<li><a href="slides/T16-HypothesisTesting.pdf">Slides</a></li>
+<li>Lecture scripts from the session and exercise solutions</li>
+</ul>
+<h3 id="mandatory-readings-13">Mandatory readings</h3>
+<ul>
+<li><a href="https://moderndive.com/9-hypothesis-testing.html">Statistical Inference via Data Science, Chapter 9: Hypothesis Testing</a></li>
+</ul>
+<h3 id="exercises-11">Exercises</h3>
 <p>TBD</p>
 
 </main>
