Fix link to wrong exercises in T9

--- a/public/material/index.html
+++ b/public/material/index.html
@@ -289,7 +289,7 @@ from within your R session:</p>
 <li><a href="slides/T9-RMarkdown.pdf">Slides</a></li>
 <li><a href="files/DesasterMarkdown.pdf">DesasterMarkdown.pdf</a></li>
 <li><a href="files/NicerMarkdown.pdf">NicerMarkdown.pdf</a></li>
-<li><a href="https://gist.github.com/graebnerc/6d268af56e00909efffc372c1a5da1c3">Code for the markdown desaster</a></li>
+<li><a href="https://gist.github.com/graebnerc/6d268af56e00909efffc372c1a5da1c3">Code for the markdown desaster and a possible solution</a></li>
 </ul>
 <h3 id="mandatory-readings-8">Mandatory readings</h3>
 <ul>
@@ -306,7 +306,7 @@ from within your R session:</p>
 (as described <a href="/post/using-exercises/">here</a>), run the following command
 from within your R session:</p>
 <pre><code>learnr::run_tutorial(
-  name = &quot;Wrangling1&quot;, 
+  name = &quot;RMarkdown&quot;, 
   package = &quot;DataScienceExercises&quot;, 
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
