Add reference to regression exercises 1

--- a/public/material/index.html
+++ b/public/material/index.html
@@ -333,8 +333,11 @@ from within your R session:</p>
 (as described <a href="/post/using-exercises/">here</a>), run the following command
 from within your R session:</p>
 <h3 id="exercises-7">Exercises</h3>
+<p>After installing (and updating) the <code>DataScienceExercises</code>-package
+(as described <a href="/post/using-exercises/">here</a>), run the following command
+from within your R session:</p>
 <pre><code>learnr::run_tutorial(
-  name = &quot;Models&quot;, 
+  name = &quot;LinearRegression1&quot;, 
   package = &quot;DataScienceExercises&quot;, 
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
@@ -347,7 +350,11 @@ from within your R session:</p>
 <li><a href="https://moderndive.com/5-regression.html">Statistical Inference via Data Science, Chapter 5: Basic regression</a></li>
 </ul>
 <h3 id="exercises-8">Exercises</h3>
-<p>TBA</p>
+<pre><code>learnr::run_tutorial(
+  name = &quot;ProjectOrga&quot;, 
+  package = &quot;DataScienceExercises&quot;, 
+  shiny_args=list(&quot;launch.browser&quot;=TRUE))
+</code></pre>
 <h2 id="s12">Session 12: Multiple linear regression</h2>
 <ul>
 <li><a href="slides/T13-MultipleLinearRegression.pdf">Slides</a></li>
