Add links to T11 exercise solutions

--- a/public/material/index.html
+++ b/public/material/index.html
@@ -344,6 +344,7 @@ from within your R session:</p>
 <h2 id="s11">Session 11: Simple linear regression</h2>
 <ul>
 <li><a href="slides/T11-SimpleLinearRegression.pdf">Slides</a></li>
+<li><a href="https://gist.github.com/graebnerc/d61da231fbc479434476fab221157536">Lecture scripts from the session and exercise solutions</a></li>
 </ul>
 <h3 id="mandatory-readings-9">Mandatory readings</h3>
 <ul>
