Fix wrong exercises links

--- a/public/material/index.html
+++ b/public/material/index.html
@@ -337,7 +337,7 @@ from within your R session:</p>
 (as described <a href="/post/using-exercises/">here</a>), run the following command
 from within your R session:</p>
 <pre><code>learnr::run_tutorial(
-  name = &quot;LinearRegression1&quot;, 
+  name = &quot;Models&quot;, 
   package = &quot;DataScienceExercises&quot;, 
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
@@ -352,7 +352,7 @@ from within your R session:</p>
 </ul>
 <h3 id="exercises-8">Exercises</h3>
 <pre><code>learnr::run_tutorial(
-  name = &quot;ProjectOrga&quot;, 
+  name = &quot;LinearRegression1&quot;, 
   package = &quot;DataScienceExercises&quot;, 
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
