--- a/public/material/index.html
+++ b/public/material/index.html
@@ -365,7 +365,11 @@ from within your R session:</p>
 <li><a href="https://moderndive.com/6-multiple-regression.html">Statistical Inference via Data Science, Chapter 6: Multiple regression</a></li>
 </ul>
 <h3 id="exercises-9">Exercises</h3>
-<p>TBD</p>
+<pre><code>learnr::run_tutorial(
+  name = &quot;LinearRegression2&quot;, 
+  package = &quot;DataScienceExercises&quot;, 
+  shiny_args=list(&quot;launch.browser&quot;=TRUE))
+</code></pre>
 <h2 id="s13">Session 13: Sampling theory</h2>
 <ul>
 <li><a href="slides/T14-SamplingTheory.pdf">Slides</a></li>
