--- a/public/material/index.html
+++ b/public/material/index.html
@@ -359,6 +359,7 @@ from within your R session:</p>
 <h2 id="s12">Session 12: Multiple linear regression</h2>
 <ul>
 <li><a href="slides/T13-MultipleLinearRegression.pdf">Slides</a></li>
+<li><a href="https://gist.github.com/graebnerc/4a9e5bb95459d8ada31f43141976efe8">Lecture notes and solutions to exercises</a></li>
 </ul>
 <h3 id="mandatory-readings-10">Mandatory readings</h3>
 <ul>
@@ -373,7 +374,7 @@ from within your R session:</p>
 <h2 id="s13">Session 13: Sampling theory</h2>
 <ul>
 <li><a href="slides/T14-SamplingTheory.pdf">Slides</a></li>
-<li>Lecture scripts from the session and exercise solutions</li>
+<li><a href="https://gist.github.com/graebnerc/822ddd3e0d316aae9dda7b5afbe11685">Lecture scripts from the session and exercise solutions</a></li>
 </ul>
 <h3 id="mandatory-readings-11">Mandatory readings</h3>
 <ul>
