--- a/public/material/index.html
+++ b/public/material/index.html
@@ -88,64 +88,52 @@
 <td style="text-align:center"><a href="slides/T7-ProjectSetup.pdf">Slides</a></td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="#s8">8</a></td>
+<td style="text-align:center"><a href="#s8s9">8</a></td>
 <td style="text-align:left">April 28 and May 4, 2022</td>
 <td style="text-align:left">Data wrangling I</td>
 <td style="text-align:center"><a href="slides/T8-DataWrangling.pdf">Slides</a></td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="#s9">9</a></td>
+<td style="text-align:center"><a href="#s10">10</a></td>
 <td style="text-align:left">May 5, 2022</td>
 <td style="text-align:left">R Markdown</td>
 <td style="text-align:center"><a href="slides/T9-RMarkdown.pdf">Slides</a></td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="#s10">10</a></td>
+<td style="text-align:center"><a href="#s11">11</a></td>
 <td style="text-align:left">May 12, 2022</td>
 <td style="text-align:left">Intro models</td>
 <td style="text-align:center"><a href="slides/T10-ModelsIntro.pdf">Slides</a></td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="#s11">11</a></td>
-<td style="text-align:left">May 19, 2022</td>
+<td style="text-align:center"><a href="#s12s13">12</a></td>
+<td style="text-align:left">May 18 and May 19, 2022</td>
 <td style="text-align:left">Simple Linear Regression</td>
 <td style="text-align:center"><a href="slides/T11-SimpleLinearRegression.pdf">Slides</a></td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="#s12">12</a></td>
-<td style="text-align:left">June 1, 2022</td>
+<td style="text-align:center"><a href="#s14s15">14</a></td>
+<td style="text-align:left">June 1 and June 2, 2022</td>
 <td style="text-align:left">Multiple Linear Regression</td>
 <td style="text-align:center"><a href="slides/T13-MultipleLinearRegression.pdf">Slides</a></td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="#s13">13</a></td>
-<td style="text-align:left">June 2, 2022</td>
+<td style="text-align:center"><a href="#s16s17">16</a></td>
+<td style="text-align:left">June 9 and 16, 2022</td>
 <td style="text-align:left">Sampling Theory</td>
 <td style="text-align:center"><a href="slides/T14-SamplingTheory.pdf">Slides</a></td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="#s14">14</a></td>
-<td style="text-align:left">June 9, 2022</td>
-<td style="text-align:left">Bootstrap</td>
+<td style="text-align:center"><a href="#s18">18</a></td>
+<td style="text-align:left">June 22, 2022</td>
+<td style="text-align:left">Bootstrap and confidence intervals</td>
 <td style="text-align:center"><a href="slides/T15-Bootstrap.pdf">Slides</a></td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="#s16">16</a></td>
-<td style="text-align:left">June 16, 2022</td>
-<td style="text-align:left">Hypothesis Testing</td>
-<td style="text-align:center"><a href="slides/T16-HypothesisTesting.pdf">Slides</a></td>
-</tr>
-<tr>
-<td style="text-align:center"><a href="#s17">17</a></td>
-<td style="text-align:left">June 22, 2022</td>
-<td style="text-align:left">Regression diagnostics</td>
-<td style="text-align:center"><a href="slides/T17-RegressionDiagnostics.pdf">Slides</a></td>
-</tr>
-<tr>
-<td style="text-align:center"><a href="#s18">18</a></td>
+<td style="text-align:center"><a href="#s19">19</a></td>
 <td style="text-align:left">June 23, 2022</td>
-<td style="text-align:left">Supervised and unsupervised machine learning</td>
-<td style="text-align:center"><a href="slides/T18-MachineLearning.pdf">Slides</a></td>
+<td style="text-align:left">Hypothesis testing</td>
+<td style="text-align:center"><a href="slides/T16-HypothesisTesting.pdf">Slides</a></td>
 </tr>
 </tbody>
 </table>
@@ -201,9 +189,6 @@ from within your R session:</p>
 <li><a href="/post/object-types-vec/">Tutorial: Vectors</a></li>
 </ul>
 <h3 id="exercises-1">Exercises</h3>
-<p>After installing (and updating) the <code>DataScienceExercises</code>-package
-(as described <a href="/post/using-exercises/">here</a>), run the following command
-from within your R session for the exercises on atomic vectors and lists:</p>
 <pre><code>learnr::run_tutorial(
   name = &quot;ObjectTypes1&quot;, 
   package = &quot;DataScienceExercises&quot;, 
@@ -220,15 +205,12 @@ from within your R session for the exercises on atomic vectors and lists:</p>
 <li><a href="https://r4ds.had.co.nz/tibbles.html">R for Data Science, Chapter 10: Tibbles</a></li>
 </ul>
 <h3 id="exercises-2">Exercises</h3>
-<p>After installing (and updating) the <code>DataScienceExercises</code>-package
-(as described <a href="/post/using-exercises/">here</a>), run the following command
-from within your R session for the exercises on atomic vectors and lists:</p>
 <pre><code>learnr::run_tutorial(
   name = &quot;ObjectTypes2&quot;, 
   package = &quot;DataScienceExercises&quot;, 
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
-<h2 id="s6">Session 6: Visualization I</h2>
+<h2 id="s6">Session 6: Visualization</h2>
 <ul>
 <li><a href="slides/T6-Visualization.pdf">Slides</a></li>
 <li><a href="/notes/t5-visualization-lecture-notes/">Lecture notes</a></li>
@@ -242,9 +224,6 @@ from within your R session for the exercises on atomic vectors and lists:</p>
 <li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/main/data-visualization.pdf">ggplot2 cheat sheet</a></li>
 </ul>
 <h3 id="exercises-3">Exercises</h3>
-<p>After installing (and updating) the <code>DataScienceExercises</code>-package
-(as described <a href="/post/using-exercises/">here</a>), run the following command
-from within your R session:</p>
 <pre><code>learnr::run_tutorial(
   name = &quot;Visualization1&quot;, 
   package = &quot;DataScienceExercises&quot;, 
@@ -261,15 +240,12 @@ from within your R session:</p>
 <li><a href="/post/importing-exporting-data/">Tutorial: Read and write data</a></li>
 </ul>
 <h3 id="exercises-4">Exercises</h3>
-<p>After installing (and updating) the <code>DataScienceExercises</code>-package
-(as described <a href="/post/using-exercises/">here</a>), run the following command
-from within your R session:</p>
 <pre><code>learnr::run_tutorial(
   name = &quot;ProjectOrga&quot;, 
   package = &quot;DataScienceExercises&quot;, 
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
-<h2 id="s8">Session 8: Data wrangling I</h2>
+<h2 id="s8s9">Sessions 8 &amp; 9: Data wrangling</h2>
 <ul>
 <li><a href="slides/T8-DataWrangling.pdf">Slides</a></li>
 <li><a href="/notes/data-wrangling-lecture-notes/">Lecture notes</a></li>
@@ -288,15 +264,12 @@ from within your R session:</p>
 <li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/main/tidyr.pdf">tidyr cheat sheet</a></li>
 </ul>
 <h3 id="exercises-5">Exercises</h3>
-<p>After installing (and updating) the <code>DataScienceExercises</code>-package
-(as described <a href="/post/using-exercises/">here</a>), run the following command
-from within your R session:</p>
 <pre><code>learnr::run_tutorial(
   name = &quot;Wrangling1&quot;, 
   package = &quot;DataScienceExercises&quot;, 
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
-<h2 id="s9">Session 9: R Markdown</h2>
+<h2 id="s10">Session 10: R Markdown</h2>
 <ul>
 <li><a href="slides/T9-RMarkdown.pdf">Slides</a></li>
 <li><a href="files/DesasterMarkdown.pdf">DesasterMarkdown.pdf</a></li>
@@ -314,9 +287,6 @@ from within your R session:</p>
 <li><a href="https://raw.githubusercontent.com/rstudio/cheatsheets/main/rmarkdown.pdf">R Markdown cheat sheet</a></li>
 </ul>
 <h3 id="exercises-6">Exercises</h3>
-<p>After installing (and updating) the <code>DataScienceExercises</code>-package
-(as described <a href="/post/using-exercises/">here</a>), run the following command
-from within your R session:</p>
 <pre><code>learnr::run_tutorial(
   name = &quot;RMarkdown&quot;, 
   package = &quot;DataScienceExercises&quot;, 
@@ -324,7 +294,7 @@ from within your R session:</p>
 </code></pre>
 <p>The practical exercise for this topic can be found
 <a href="/post/rmarkdown-exercises/">here</a>.</p>
-<h2 id="s10">Session 10: Modelling data</h2>
+<h2 id="s11">Session 11: Modelling data</h2>
 <ul>
 <li><a href="slides/T10-ModelsIntro.pdf">Slides</a></li>
 <li><a href="http://guessthecorrelation.com/">Guess the correlation browser game</a></li>
@@ -341,7 +311,7 @@ from within your R session:</p>
   package = &quot;DataScienceExercises&quot;, 
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
-<h2 id="s11">Session 11: Simple linear regression</h2>
+<h2 id="s12s13">Sessions 12 &amp; 13: Simple linear regression</h2>
 <ul>
 <li><a href="slides/T11-SimpleLinearRegression.pdf">Slides</a></li>
 <li><a href="https://gist.github.com/graebnerc/d61da231fbc479434476fab221157536">Lecture scripts from the session and exercise solutions</a></li>
@@ -356,7 +326,7 @@ from within your R session:</p>
   package = &quot;DataScienceExercises&quot;, 
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
-<h2 id="s12">Session 12: Multiple linear regression</h2>
+<h2 id="s14s15">Sessions 14 &amp; 15: Multiple linear regression</h2>
 <ul>
 <li><a href="slides/T13-MultipleLinearRegression.pdf">Slides</a></li>
 <li><a href="https://gist.github.com/graebnerc/4a9e5bb95459d8ada31f43141976efe8">Lecture notes and solutions to exercises</a></li>
@@ -371,7 +341,7 @@ from within your R session:</p>
   package = &quot;DataScienceExercises&quot;, 
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
-<h2 id="s13">Session 13: Sampling theory</h2>
+<h2 id="s16s17">Sessions 16 &amp; 17: Sampling theory</h2>
 <ul>
 <li><a href="slides/T14-SamplingTheory.pdf">Slides</a></li>
 <li><a href="https://gist.github.com/graebnerc/822ddd3e0d316aae9dda7b5afbe11685">Lecture scripts from the session and exercise solutions</a></li>
@@ -382,8 +352,12 @@ from within your R session:</p>
 <li><a href="/post/mcs/">Tutorial: Monte Carlo Simulations in R</a></li>
 </ul>
 <h3 id="exercises-10">Exercises</h3>
-<p>TBD</p>
-<h2 id="s14">Session 14: Bootstrapping and confidence intervals</h2>
+<pre><code>learnr::run_tutorial(
+  name = &quot;Sampling&quot;, 
+  package = &quot;DataScienceExercises&quot;, 
+  shiny_args=list(&quot;launch.browser&quot;=TRUE))
+</code></pre>
+<h2 id="s18">Session 18: Bootstrapping and confidence intervals</h2>
 <ul>
 <li><a href="slides/T15-Bootstrap.pdf">Slides</a></li>
 <li><a href="files/T15-SemesterSample.csv">T15-SemesterSample.csv</a></li>
@@ -395,7 +369,7 @@ from within your R session:</p>
 </ul>
 <h3 id="exercises-11">Exercises</h3>
 <p>TBD</p>
-<h2 id="s16">Session 16: Hypothesis testing</h2>
+<h2 id="s19">Session 19: Hypothesis testing</h2>
 <ul>
 <li><a href="slides/T16-HypothesisTesting.pdf">Slides</a></li>
 <li>Lecture scripts from the session and exercise solutions</li>
