--- a/public/material/index.html
+++ b/public/material/index.html
@@ -119,19 +119,19 @@
 </tr>
 <tr>
 <td style="text-align:center"><a href="#s16s17">16</a></td>
-<td style="text-align:left">June 9 and 16, 2022</td>
+<td style="text-align:left">June 9, 16 and 23, 2022</td>
 <td style="text-align:left">Sampling Theory</td>
 <td style="text-align:center"><a href="slides/T14-SamplingTheory.pdf">Slides</a></td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="#s18">18</a></td>
-<td style="text-align:left">June 22, 2022</td>
+<td style="text-align:center"><a href="#A1">A1</a></td>
+<td style="text-align:left">Omitted</td>
 <td style="text-align:left">Bootstrap and confidence intervals</td>
 <td style="text-align:center"><a href="slides/T15-Bootstrap.pdf">Slides</a></td>
 </tr>
 <tr>
-<td style="text-align:center"><a href="#s19">19</a></td>
-<td style="text-align:left">June 23, 2022</td>
+<td style="text-align:center"><a href="#A2">A2</a></td>
+<td style="text-align:left">Omitted</td>
 <td style="text-align:left">Hypothesis testing</td>
 <td style="text-align:center"><a href="slides/T16-HypothesisTesting.pdf">Slides</a></td>
 </tr>
@@ -357,29 +357,23 @@ from within your R session:</p>
   package = &quot;DataScienceExercises&quot;, 
   shiny_args=list(&quot;launch.browser&quot;=TRUE))
 </code></pre>
-<h2 id="s18">Session 18: Bootstrapping and confidence intervals</h2>
+<h2 id="A1">Session A1: Bootstrapping and confidence intervals (omitted)</h2>
 <ul>
 <li><a href="slides/T15-Bootstrap.pdf">Slides</a></li>
 <li><a href="files/T15-SemesterSample.csv">T15-SemesterSample.csv</a></li>
-<li>Lecture scripts from the session and exercise solutions</li>
 </ul>
 <h3 id="mandatory-readings-12">Mandatory readings</h3>
 <ul>
 <li><a href="https://moderndive.com/8-confidence-intervals.html">Statistical Inference via Data Science, Chapter 8: Bootstrapping and Confidence Intervals</a></li>
 </ul>
-<h3 id="exercises-11">Exercises</h3>
-<p>TBD</p>
-<h2 id="s19">Session 19: Hypothesis testing</h2>
+<h2 id="A2">Session A2: Hypothesis testing (omitted)</h2>
 <ul>
 <li><a href="slides/T16-HypothesisTesting.pdf">Slides</a></li>
-<li>Lecture scripts from the session and exercise solutions</li>
 </ul>
 <h3 id="mandatory-readings-13">Mandatory readings</h3>
 <ul>
 <li><a href="https://moderndive.com/9-hypothesis-testing.html">Statistical Inference via Data Science, Chapter 9: Hypothesis Testing</a></li>
 </ul>
-<h3 id="exercises-12">Exercises</h3>
-<p>TBD</p>
 
 </main>
 
