--- a/content/tutorial/installation/pubdir/onlinecontent.html
+++ b/content/tutorial/installation/pubdir/onlinecontent.html
@@ -478,7 +478,8 @@ Install RTools</h3>
 <p>If you are using Windows, it is necessary to install
 <code>RTools</code>, which is required if you want to use packages
 written by others that are not officially released. To do so, simply
-visit the following website, download the installer, and install the
+visit <a href="https://cran.r-project.org/bin/windows/Rtools/">the
+following website</a>, download the installer, and install the
 software:</p>
 <p>When asked during the installation process, do <em>not</em> select
 the box for <code>Add rtools to system PATH</code>, but <em>do</em>
