add reference to lecture videos

--- a/public/material/index.html
+++ b/public/material/index.html
@@ -180,11 +180,9 @@ For more information on how to install and use the exercises, see the respective
 </ul>
 <h2 id="s3">Session 3: Basic object types</h2>
 <ul>
-<li>Link to the lecture videos</li>
+<li>Lecture videos available via Moodle</li>
+<li><a href="https://gist.github.com/graebnerc/8569172d758ea2a4c5f9305dc3ce9966">Lecture notes and solutions to intermediate exercises</a></li>
 </ul>
-<!--
-- [Solutions to intermediate exercises](https://gist.github.com/graebnerc/49af8ef6e17b5f66cf34443ef1d26dec)
--->
 <h3 id="mandatory-readings-2">Mandatory readings</h3>
 <ul>
 <li><a href="/tutorial/object-types-vec/">Tutorial: Vectors</a></li>
