--- a/public/tutorial/first-steps/pubdir/onlinecontent.html
+++ b/public/tutorial/first-steps/pubdir/onlinecontent.html
@@ -763,7 +763,7 @@ earlier package. You see this by calling the objects by name:</p>
 #&gt; {
 #&gt;     UseMethod(&quot;lead&quot;)
 #&gt; }
-#&gt; &lt;bytecode: 0x7fcb447fa698&gt;
+#&gt; &lt;bytecode: 0x7fa4f00d8780&gt;
 #&gt; &lt;environment: namespace:plm&gt;</code></pre>
 <p>The last line informs is about the fact that the function was defined
 in the package <code>plm</code>. If we now want to call the function
@@ -791,7 +791,7 @@ in the package <code>plm</code>. If we now want to call the function
 #&gt;     vec_c(vec_slice(inputs$x, -seq_len(n)), vec_rep(inputs$default, 
 #&gt;         n))
 #&gt; }
-#&gt; &lt;bytecode: 0x7fcaf5290fd8&gt;
+#&gt; &lt;bytecode: 0x7fa4f1934438&gt;
 #&gt; &lt;environment: namespace:dplyr&gt;</code></pre>
 <p>This can be very confusing. Thus, I <em>strongly recommend</em> to
 <em>always</em> use <code>::</code> when it comes to masking, no matter
