Add youtube link

--- a/public/material/index.html
+++ b/public/material/index.html
@@ -180,7 +180,7 @@ For more information on how to install and use the exercises, see the respective
 </ul>
 <h2 id="s3">Session 3: Basic object types</h2>
 <ul>
-<li>Lecture videos available via Moodle</li>
+<li><a href="https://youtube.com/playlist?list=PLZDawQMrG1RLqzcegYiLnK4vQnSbqjf1K">Lecture videos</a></li>
 <li><a href="https://gist.github.com/graebnerc/8569172d758ea2a4c5f9305dc3ce9966">Lecture notes and solutions to intermediate exercises</a></li>
 </ul>
 <h3 id="mandatory-readings-2">Mandatory readings</h3>
