--- a/public/material/index.html
+++ b/public/material/index.html
@@ -79,7 +79,7 @@
 <td style="text-align:center"><a href="#s5">5</a></td>
 <td style="text-align:left">Oct 6, 2022</td>
 <td style="text-align:left">Recap &amp; practice</td>
-<td style="text-align:center">Slides</td>
+<td style="text-align:center"><a href="slides/T5-Exercises.pdf">Slides</a></td>
 <td></td>
 </tr>
 <tr>
@@ -189,7 +189,7 @@ For more information on how to install and use the exercises, see the respective
 </ul>
 <h2 id="s4">Session 4: Advanced object types</h2>
 <ul>
-<li><a href="https://gist.github.com/graebnerc/bf8b1b60084377744881b392f0c9534e">Session notes</a></li>
+<li><a href="https://gist.github.com/graebnerc/53a88869a8d178efea90fff92ab272f5">Session notes</a></li>
 </ul>
 <!--
 - [Session notes](https://gist.github.com/graebnerc/bf8b1b60084377744881b392f0c9534e)
@@ -200,7 +200,10 @@ For more information on how to install and use the exercises, see the respective
 <li><a href="https://r4ds.had.co.nz/tibbles.html">R for Data Science, Chapter 10: Tibbles</a></li>
 </ul>
 <h2 id="s5">Session 5: Recap and practice</h2>
-<p>TBA</p>
+<ul>
+<li><a href="slides/T5-Exercises.pdf">Exercises</a></li>
+<li><a href="https://gist.github.com/graebnerc/0420edabdf04b78886fe8962a2c8bbe7">Solutions</a></li>
+</ul>
 <h2 id="s6">Session 6: Visualization</h2>
 <ul>
 <li><a href="/notes/visualization-lecture-notes/">Lecture notes</a></li>
