--- a/content/tutorial/importing-exporting-data/pubdir/onlinecontent.html
+++ b/content/tutorial/importing-exporting-data/pubdir/onlinecontent.html
@@ -493,10 +493,10 @@ reading (or ‘importing’) data can be very frustrating and complicated.
 The reason is that there are many different ways of how exactly data is
 stored within a <code>csv</code>-file. But don’t worry: first, the
 package <a href="https://github.com/Rdatatable/data.table">data.table</a> provides
-for the amazing function <code>data.table::freat()</code> that allows
+for the amazing function <code>data.table::fread()</code> that allows
 you to account for basically every specifity of the
 <code>csv</code>-files you will encounter. Second, with only a handful
-of arguments passed to <code>data.table::freat()</code> you can already
+of arguments passed to <code>data.table::fread()</code> you can already
 cover the vast majority of practically relevant cases.</p>
 <p>The main focus of this tutorial, thus, is to introduce you to the
 most important arguments of <code>data.table::fread()</code>. After
