--- a/content/tutorial/obj-types-i-functions/pubdir/onlinecontent.html
+++ b/content/tutorial/obj-types-i-functions/pubdir/onlinecontent.html
@@ -596,7 +596,7 @@ brackets:</p>
 ##   hypotenuse &lt;- sqrt(hypo_squared) # sqrt() takes square root
 ##   return(hypotenuse)
 ## }
-## &lt;bytecode: 0x7fe9b92968d0&gt;</code></pre>
+## &lt;bytecode: 0x7f94739b6378&gt;</code></pre>
 <p>Note that all object names used within the function body are lost
 after the function has been called. The deeper reason is that functions
 have their own <a href="https://adv-r.hadley.nz/environments.html">environment</a>.
