--- a/public/material/index.html
+++ b/public/material/index.html
@@ -206,6 +206,7 @@ For more information on how to install and use the exercises, see the respective
 </ul>
 <h2 id="s6">Session 6: Visualization</h2>
 <ul>
+<li><a href="https://gist.github.com/graebnerc/c1ae93c68313eef1a5a6986855fba78b">Lecture script</a></li>
 <li><a href="/notes/visualization-lecture-notes/">Lecture notes</a></li>
 </ul>
 <h3 id="mandatory-readings-4">Mandatory readings</h3>
@@ -219,6 +220,7 @@ For more information on how to install and use the exercises, see the respective
 <h2 id="s7">Session 7: Project management and data import</h2>
 <ul>
 <li><a href="files/fread_expls.zip">Example data</a></li>
+<li><a href="https://gist.github.com/graebnerc/642cacdb29f1cf98057921ae5f4a8cd5">Session notes and solutions to exercises</a></li>
 </ul>
 <h3 id="mandatory-readings-5">Mandatory readings</h3>
 <ul>
