--- a/content/notes/data-wrangling-lecture-notes/pubdir/onlinecontent.html
+++ b/content/notes/data-wrangling-lecture-notes/pubdir/onlinecontent.html
@@ -462,7 +462,7 @@ data</a></li>
 </ul></li>
 <li><a href="#chaining-wrangling-tasks-using-pipes" id="toc-chaining-wrangling-tasks-using-pipes"><span class="toc-section-number">4</span> Chaining wrangling tasks using
 pipes</a></li>
-<li><a href="#creating-of-manipulating-variables" id="toc-creating-of-manipulating-variables"><span class="toc-section-number">5</span> Creating of manipulating
+<li><a href="#creating-or-manipulating-variables" id="toc-creating-or-manipulating-variables"><span class="toc-section-number">5</span> Creating or manipulating
 variables</a></li>
 <li><a href="#filtering-rows" id="toc-filtering-rows"><span class="toc-section-number">6</span> Filtering rows</a></li>
 <li><a href="#selecting-columns" id="toc-selecting-columns"><span class="toc-section-number">7</span> Selecting columns</a></li>
@@ -707,8 +707,8 @@ first argument to the function on the next line we can space the
 so make sure you use it often. But for code development it might be
 nevertheless helpful to write the intermediate steps explicitly.</p>
 </div>
-<div id="creating-of-manipulating-variables" class="section level1" number="5">
-<h1><span class="header-section-number">5</span> Creating of
+<div id="creating-or-manipulating-variables" class="section level1" number="5">
+<h1><span class="header-section-number">5</span> Creating or
 manipulating variables</h1>
 <p>The function <code>dplyr::mutate()</code> is used both for
 manipulating existing columns as well as creating new columns. In the
