--- a/public/material/index.html
+++ b/public/material/index.html
@@ -230,12 +230,10 @@ For more information on how to install and use the exercises, see the respective
 <h2 id="s8">Sessions 8: Data wrangling</h2>
 <ul>
 <li><a href="/notes/data-wrangling-lecture-notes/">Lecture notes</a></li>
-<li><a href="files/wrangling-notes-data.zip">Data for lecture notes</a></li>
-<li><a href="files/wrangling_exercises_data.zip">Exercise data</a></li>
+<li><a href="files/T8-lecture-notes-data.zip">Data for lecture notes</a></li>
+<li><a href="files/T8-ExerciseData.zip">Exercise data</a></li>
+<li><a href="">Lecture script from the session and exercise solutions</a></li>
 </ul>
-<!--
-- [Lecture scripts from the session and exercise solutions](https://gist.github.com/graebnerc/7a054a52cd5799f0adf66c269b040b46)
--->
 <h3 id="mandatory-readings-6">Mandatory readings</h3>
 <ul>
 <li><a href="https://r4ds.had.co.nz/transform.html">R for Data Science, Chapter 5: Data transformation</a></li>
